# codasip-risc-v

./: .cproject  .gitignore  .project  README.md  codal.conf
libs/newlib/: CMakeConfig.txt  CMakeLists.txt
libs/newlib/libgloss/: CMakeLists.txt  crt0.s  sbrk.c  syscalls.c  syscalls.h
libs/newlib/newlib/libc/: CMakeLists.txt  setjmp.S
libs/startup/: crt0.s
model/ca/decoders/: ca_decoder.codal
model/ca/events/: main_reset.codal
model/ca/include/: ca_defines.hcodal
model/ca/other/: ca_utils.codal
model/ca/pipelines/: ca_pipe_control.codal  ca_pipe_ex.codal  ca_pipe_fe.codal  ca_pipe_id.codal  ca_pipe_me.codal  ca_pipe_wb.codal
model/ca/resources/: ca_resources.codal
model/ia/compiler/: rulelib.rl
model/ia/events/: ia_main_reset.codal
model/ia/other/: ia_utils.codal
model/share/include/: config.hcodal  debug.hcodal  opcodes.hcodal  utils.hcodal
model/share/isa/: isa.codal  isa_ops.codal
model/share/other/: settings.codal
model/share/resources/: arch.codal  interface.codal
work/: .build.json.db  tasks.py
work/ca/: RISC_V5.ca.analyse.xml  RISC_V5.ca.watermark  RISC_V5.ca.xml
work/ca/profiler/: decoders.txt
work/ca/report/: Resources.txt
work/ca/sdk/: sdk.xml
work/ia/: RISC_V5.ia.watermark  RISC_V5.ia.xml
work/ia/compiler/: LLVMBuild.txt  full_backendgen_log.txt  simd_info.txt
work/ia/profiler/: decoders.txt
work/ia/sdk/: sdk.xml
work/tmp/assembler/: CMakeCache.txt  CMakeLists.txt  Makefile  asm_main.cpp  asmmemoryinfo_gen.h  bundle_gen.cpp  cmake_install.cmake  codasip_assembler_TokenIdInfos.cpp  codasip_assembler_TokenIdInfos.h  usedattr.cpp  (+13 more)
work/tmp/compiler/llvm/include/llvm/IR/: CMakeLists.txt  DebugInfoMetadata.h  Function.h  GlobalValue.h  Intrinsics.gen  Intrinsics.td
(+372 files in other folders)
