#*******************************************************************************
#*      "Copyright (C) 2014, Codasip s.r.o., All Rights Reserved"              *
#*******************************************************************************

add_subdirectory(newlib/libc)
add_subdirectory(libgloss)
