#*******************************************************************************
#*      "Copyright (C) 2014, Codasip s.r.o., All Rights Reserved"              *
#*******************************************************************************

include_directories(
    "."
)

add_library(c_target
    setjmp.S
)
